@@ -79,8 +79,8 @@ smrfactor_mass_user_enable=no     # Enable user-defined reference mass factor in
 # The user-defined reference mass can either be randomly selected from a min-max range, Scanned through min-max range, or given a specific value and standard uncertainty
 smrfactor_mass_user_random=no     # yes=randomly select user-defined reference mass between min and max.  This is done even if phase1_random_samples_enable=no
 smrfactor_mass_user_scan=no       # yes=step user-defined reference mass through min-max range. This is done even if phase1_random_samples_enable=no
-smrfactor_mass_user_min=1.0E3     # Minimum reference mass value when set to scan or random
-smrfactor_mass_user_max=1.0E30    # Maximum reference mass value when set to scan or random
+smrfactor_mass_user_min=1.0E4     # Minimum reference mass value when set to scan or random
+smrfactor_mass_user_max=1.0E13    # Maximum reference mass value when set to scan or random
 smrfactor_mass_user_step=0.001    # Multiplier for scanning through reference mass range: new_value = old_value + (old_value * smrfactor_mass_user_step)
 smrfactor_mass_user=1.0E9         # Specific double precision user-defined reference mass factor in solution mass ratios
 smrfactor_mass_user_error=0.0     # Specific dDouble precision user-defined reference mass factor in solution mass ratios standard uncertainty (0.0 = exact)
