@@ -43,19 +43,19 @@ exp_neg_enable=yes                # Enable negative exponents
 # Phase 1 processing options
 #
 phase1_run_continuous=yes         # yes = Run continuously, no = run only once
-phase1_random_samples_enable=yes  # yes = Use random samples from within experimental uncertainty for all variables in phase1, no = use center reference values
+phase1_random_samples_enable=no   # yes = Use random samples from within experimental uncertainty for all variables in phase1, no = use center reference values
 phase1_filter=4                   # phase 1 matches must be within 10^(-phase1_filter) of a phase1_int_match or 1/phase1_int_match to pass to phase 2.  Suppored values are 3,4,5,6
 phase1_int_match_max=8            # Maximum integer or 1/integer to test for phase 1 matches
 phase1_int_match_filter=yes       # Filter phase1_int_match > 4 to only allow multiples of 2 or 3
-phase1_two_term_test_min=1.75     # Minimum value of "reasonable range" for two_term_test.  Used to quickly abort phase 1 if out of range.  If phase 1 solves then two_term_test is evaluated for close integer match
-phase1_two_term_test_max=2.25     # Maximum value of "reasonable range" for two_term_test. Used to quickly abort phase 1 if out of range.  If phase 1 solves then two_term_test is evaluated for close integer match
+phase1_two_term_test_min=0.0      # Minimum value of "reasonable range" for two_term_test.  Used to quickly abort phase 1 if out of range.  If phase 1 solves then two_term_test is evaluated for close integer match
+phase1_two_term_test_max=1.0E99   # Maximum value of "reasonable range" for two_term_test. Used to quickly abort phase 1 if out of range.  If phase 1 solves then two_term_test is evaluated for close integer match
 phase1_unsolvable_checkpoint=1000000 # In (1-smr) mode, number of phase 1 inner loop samples (not to be confused with random input samples) to periodically check if phase 1 has made any progress. Lower
                                      # numbers find unsolvable formulas faster but risk missing slow to solve formulas
 phase1_mc_samples_limit=10000000000  # In (1-smr) mode, maximum phase 1 inner loop samples. Safety in case other unsolvable checks fail
 #
 # Phase 2 processing options
 #
-phase2_enable=yes                 # Set to 'no' to disable coefficient factoring and phase 2 processing.
+phase2_enable=no                  # Set to 'no' to disable coefficient factoring and phase 2 processing.
 phase2_symmetry_min=0             # Minimum symmetry score to allow processing in phase 2
 phase2_complexity_max=999         # Maximum complexity score to allow processing in phase 2
 phase2_check_nbv_nss=yes          # Require all terms to all have n-ball volume (nbv) factors, all have n-sphere surface area (nss) factors, or neither
@@ -71,13 +71,13 @@ phase2_ignore_small_rel_unc=no    # Use fixed (exact) reference values for input
 # In (1-smr) mode each enabled reference mass is tested separately
 #
 smrfactor_mass_mp_enable=no       # Enable Planck mass factor in solution mass ratios
-smrfactor_mass_v_enable=yes       # Enable Higgs vacuum expectation value factor in solution mass ratios
-smrfactor_mass_mz_enable=yes      # Enable Z boson mass factor in solution mass ratios
-smrfactor_mass_mw_enable=yes      # Enable W boson mass factor in solution mass ratios
-smrfactor_mass_mh0_enable=yes     # Enable Higgs boson mass factor in solution mass ratios
-smrfactor_mass_user_enable=no     # Enable user-defined reference mass factor in solution mass ratios
+smrfactor_mass_v_enable=no        # Enable Higgs vacuum expectation value factor in solution mass ratios
+smrfactor_mass_mz_enable=no       # Enable Z boson mass factor in solution mass ratios
+smrfactor_mass_mw_enable=no       # Enable W boson mass factor in solution mass ratios
+smrfactor_mass_mh0_enable=no      # Enable Higgs boson mass factor in solution mass ratios
+smrfactor_mass_user_enable=yes    # Enable user-defined reference mass factor in solution mass ratios
 # The user-defined reference mass can either be randomly selected from a min-max range, Scanned through min-max range, or given a specific value and standard uncertainty
-smrfactor_mass_user_random=no     # yes=randomly select user-defined reference mass between min and max.  This is done even if phase1_random_samples_enable=no
+smrfactor_mass_user_random=yes    # yes=randomly select user-defined reference mass between min and max.  This is done even if phase1_random_samples_enable=no
 smrfactor_mass_user_scan=no       # yes=step user-defined reference mass through min-max range. This is done even if phase1_random_samples_enable=no
 smrfactor_mass_user_min=1.0E4     # Minimum reference mass value when set to scan or random
 smrfactor_mass_user_max=1.0E13    # Maximum reference mass value when set to scan or random
@@ -97,13 +97,13 @@ smrfactor_mass_user_error=0.0     # Specific dDouble precision user-defined refe
 # The following smrfactors are allowed to be part of the solution mass ratio for a term in (1-smr) mode.  Otherwise they are not used
 # set _exp_up_max=0 and _exp_down_max=1 to disable a factor
 #
-smrfactor_rational_max=8          # Maximum numerator x or denomenator y for factor (x/y) solution mass ratios
+smrfactor_rational_max=1          # Maximum numerator x or denomenator y for factor (x/y) solution mass ratios
 smrfactor_rational_filter=yes     # Filter mrfactor_rational_max numerators and denomenators > 4 to only allow multiples of 2 or 3 opposite 1 ex: 16/1 or 1/9
-smrfactor_2_exp_up_max=1          # Maximum +/- numerator x for 2^x/y factor in solution mass ratios
-smrfactor_2_exp_down_max=2        # Maximum denomenator y for 2^(x/y) factor in solution mass ratios
-smrfactor_alpha_exp_up_max=2      # Maximum +/- numerator x for alpha^(x/y) factor in solution mass ratios
+smrfactor_2_exp_up_max=0          # Maximum +/- numerator x for 2^x/y factor in solution mass ratios
+smrfactor_2_exp_down_max=1        # Maximum denomenator y for 2^(x/y) factor in solution mass ratios
+smrfactor_alpha_exp_up_max=0      # Maximum +/- numerator x for alpha^(x/y) factor in solution mass ratios
 smrfactor_alpha_exp_down_max=1    # Maximum denomenator y for alpha^(x/y) factor in solution mass ratios
-smrfactor_pi_exp_up_max=2         # Maximum +/- numerator x for pi^(x/y) factor in solution mass ratios
+smrfactor_pi_exp_up_max=0         # Maximum +/- numerator x for pi^(x/y) factor in solution mass ratios
 smrfactor_pi_exp_down_max=1       # Maximum denomenator y for pi^(x/y) factor in solution mass ratios
 smrfactor_user=1.0                # Double precision user-defined factor in solution mass ratios
 smrfactor_user_exp_up_max=0       # Maximum +/- numerator x for user^(x/y) factor in solution mass ratios
